--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "jest-dom": "^3.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-testing-library": "^6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,6 +26,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^1.6.0",
     "prettier": "^1.17.0"
   }
 }
